# ANALYTIX.AI

./: .env  .env.example  .gitignore  .vercelignore  CONTRIBUTING.md  Dockerfile  FEATURES.md  LICENSE  Project_Technical_Documentation.ipynb  README.md  app.py  docker-compose.yml  futureplan.txt  index.html  package-lock.json  package.json  pyproject.toml  render.yaml  requirements-backend.txt  requirements-dev.txt  requirements.txt  run_app.bat  tailwind.config.js  vercel.json
.github/workflows/: ci.yml
api/: index.py
app/: config.py  exceptions.py  logger.py  main.py
app/api/: schemas.py
app/core/: orchestrator.py  sockets.py
app/diagnostics/: system_checkup.py
app/services/: cleaning_service.py  dataset_service.py  decision_service.py  eda_service.py  explainability_service.py  forecasting_service.py  inference_service.py  modeling_service.py  pipeline_controller.py  report_service.py  sales_intelligence_service.py  stats_service.py  strategic_narrative.py  task_service.py
app/utils/: data_manager.py  decision_utils.py  domain_config.py  helpers.py  metadata_manager.py  response_schema.py  validators.py
backend/: .env.example  README.md  __init__.py  config.py  database.py  dependencies.py  main.py
backend/api/: auth.py  datasets.py  intelligence.py  models.py  predictions.py  processing.py  users.py
backend/core/: __init__.py  exceptions.py
backend/db/: models.py
backend/services/: auth_service.py  data_service.py  intelligence_service.py  ml_service.py
config/: logging_config.py  settings.py
core/: __init__.py
docs/: API.md  API_REFERENCE.md  ARCHITECTURE.md  DEPLOYMENT.md  DEPLOYMENT_RECOVERY_PLAN.md  FINAL_PROJECT_REPORT.md  PROJECT_GUIDE.md  user_guide_analytix_ai.md
frontend/: dashboard.html  index.html  onboarding.html  package-lock.json  package.json  signin.html  signup.html
intelligence/: __init__.py  drift_detection.py  model_comparison.py  monitoring.py
modules/: data_loader.py  data_validator.py  database.py  insights.py  metrics.py  model_persistence.py  profiling.py  timeseries.py
scripts/: run_tests.sh  setup.bat  setup.sh
src/: App.jsx  __init__.py  app.py  index.css
streamlit_app/: Home.py  app.py
tests/: conftest.py  test_narrative.py
(+247 files in other folders)
